table overflow minor css fix

--- a/src/components/clients/styles.module.css
+++ b/src/components/clients/styles.module.css
@@ -168,3 +168,7 @@
   flex-direction: row;
   gap: 1em;
 }
+.rut p {
+  word-break: keep-all;
+  white-space: nowrap;
+}
