--- a/src/components/orders/clientLink/styles.module.css
+++ b/src/components/orders/clientLink/styles.module.css
@@ -16,10 +16,8 @@
   padding: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   z-index: 1000;
-  border-radius: 4px;
   min-width: 200px;
   color: var(--light-grayish-blue);
-  max-width: 400px;
   overflow: hidden;
 }
 
